<resources>
    <string name="app_name">Threads</string>
    <string name="btn_nothread_string">Sem Threads</string>
    <string name="btn_thread_anr_string">ANR</string>
    <string name="btn_thread_simple_string">Thread errado</string>
    <string name="btn_thread_viewpost_string">view.post</string>
    <string name="btn_thread_runonui_string">runOnUI</string>
    <string name="btn_thread_asynctask_string">AsyncTask</string>
    <string name="btn_asynclist_string">ListAdapter</string>
    <string name="btn_recyclerView_string">RecyclerView</string>
    <string name="btn_postDelayed_string">postDelayed()</string>
    <string name="btn_async_counter_string">Countdown</string>
    <string name="btn_iniciar_countdown_string">Iniciar</string>
    <string name="btn_cancelar_countdown_string">Cancelar</string>
    <string name="async_example">Exemplos de AsyncTask</string>
    <string name="postDelayed_example">Exemplos de postDelayed</string>
    <string name="load_icon_example">Exemplo: Carregar imagem</string>
    <string name="load_icon_string">Carregar</string>
    <string name="other_button_string">Outro</string>
    <string name="image_desc_string">Imagem</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="contador_de_toasts">Toasts: </string>
    <string name="texto_filler">Texto apenas pra constar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_textEdit">Apenas para testar Async...</string>
</resources>
