<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_textEdit"/>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_iniciarCountdown"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_iniciar_countdown_string"
            android:textSize="18sp" >
        </Button>

        <Button
            android:id="@+id/btn_cancelarCountdown"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar_countdown_string"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>
    <TextView
        android:id="@+id/valorContagem"
        android:padding="10dp"
        android:textSize="40sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="..." />


</LinearLayout>